--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,6 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".Career.CareerMainActivity">
         </activity>
         <activity android:name=".Career.LicenseDetail">
         </activity>
@@ -47,6 +44,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".JobActivity"/>
+        <activity android:name=".Career.CareerActivity">
         </activity>
     </application>
 
