--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".Career.LicenseDetail">
         </activity>
@@ -31,11 +36,6 @@
         <activity android:name=".SignUp.SignUp3">
         </activity>
         <activity android:name=".SignUp.SignUp4">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
-
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
         </activity>
         <activity android:name=".InfoActivity">
         </activity>
@@ -44,10 +44,11 @@
         <activity android:name=".ScheduleRegisterActivity">
         </activity>
         <activity android:name=".SplashActivity">
-
         </activity>
         <activity android:name=".JobActivity"/>
         <activity android:name=".Career.CareerActivity">
+        </activity>
+        <activity android:name=".MyPage.InterestArea">
         </activity>
     </application>
 
