--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
-
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
 }
