--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,6 @@
         <activity android:name=".SignUp.SignUp3">
         </activity>
         <activity android:name=".SignUp.SignUp4">
-
         </activity>
         <activity android:name=".InfoActivity">
         </activity>
@@ -51,7 +50,9 @@
         </activity>
         <activity android:name=".MyPage.InterestArea">
         </activity>
-        <activity android:name=".Career.AwardDetail"></activity>
+        <activity android:name=".Career.AwardDetail"/>
+        <activity android:name=".Info.WelcomeActivity">
+        </activity>
     </application>
 
 </manifest>
