--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,19 +39,22 @@
         <activity android:name=".ScheduleRegisterActivity">
         </activity>
         <activity android:name=".SplashActivity">
+
+        </activity>
+        <activity android:name=".MyPage.JobActivity"/>
+        <activity android:name=".Career.CareerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MyPage.JobActivity"/>
-        <activity android:name=".Career.CareerActivity">
-        </activity>
         <activity android:name=".MyPage.InterestArea">
         </activity>
         <activity android:name=".Career.AwardDetail"/>
         <activity android:name=".Info.WelcomeActivity">
+        </activity>
+        <activity android:name=".CalendarDetailActivity">
         </activity>
     </application>
 
