--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+
+    //lottie
+    implementation 'com.airbnb.android:lottie:2.6.0-beta19'
 }
